--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: page
-title: My Data Science Project Page
-subtitle: Predictive Analytics for predicting tomorrow's winning lottery numbers.
-bigimg: /img/path.jpg
+title: HAHAHAHAHAHAHAHA
+subtitle: wow.
+bigimg: /img/rio-rio-de-janeiro-port-1.jpg.image.750.563.low.jpg
 ---
 
 <div class="main-explain-area jumbotron">
